# veritypay-reference

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_API.md  README.md  ROADMAP.md
crates/vp-reference-cli/: Cargo.toml
crates/vp-reference-cli/src/: error.rs  explain.rs  input.rs  lib.rs  main.rs  output.rs  serve.rs  verify.rs
crates/vp-reference-cli/tests/: verify_command.rs
crates/vp-reference-core/: Cargo.toml
crates/vp-reference-core/src/: context.rs  context_error.rs  error.rs  evaluation_input.rs  lib.rs
crates/vp-reference-core/tests/: evaluation_context.rs  evaluation_input.rs
crates/vp-reference-interpreter/: Cargo.toml
crates/vp-reference-interpreter/src/: evaluation_policy.rs  evaluator_run.rs  interpreter.rs  lib.rs  rule.rs  rule_evaluation.rs  rule_set.rs  text_normalization.rs
crates/vp-reference-interpreter/src/evaluators/: body_equality.rs  mod.rs  normalized_text.rs  registry.rs  trait_def.rs
crates/vp-reference-interpreter/src/rules/: minimal_body_equality.rs  mod.rs  vp_rule_0001.rs  vp_rule_0002.rs  vp_rule_0011.rs
crates/vp-reference-interpreter/tests/: assertion_evaluator_dispatch.rs  minimal_evaluation.rs  normalized_text_evaluation.rs  vp_platform_1_2_evaluation.rs  vp_platform_evaluation.rs  vp_rule_0001_evaluation.rs
crates/vp-reference-model/: Cargo.toml
crates/vp-reference-model/src/: assertion.rs  build_error.rs  claim.rs  evaluation_policy.rs  evidence.rs  evidence_content.rs  evidence_set.rs  identifiers.rs  lib.rs  metadata.rs  outcome.rs  trace.rs  verification_result.rs
crates/vp-reference-model/tests/: domain_model.rs  platform_1_2_model.rs
crates/vp-reference-report/: Cargo.toml
crates/vp-reference-report/src/: lib.rs  report.rs
crates/vp-reference-spec/: Cargo.toml
crates/vp-reference-spec/src/: error.rs  lib.rs  loader.rs  spec_input.rs
crates/vp-reference-spec/tests/: spec_loader.rs
docs/adrs/: 0001-reference-implementation-language.md  0002-workspace-architecture.md  0003-domain-model-architecture.md  0004-minimal-evaluation-semantics.md  0005-evaluation-rule-architecture.md  0006-ruleset-architecture.md  0007-reference-interpreter-public-contract.md  0009-assertion-evaluator-architecture.md  README.md
examples/: claim.normalized_text.json  evidence.normalized_text.json
scripts/: readiness-gate.sh
tests/: workspace.rs
