[workspace]
resolver = "2"
members = [
    ".",
    "crates/vp-reference-cli",
    "crates/vp-reference-core",
    "crates/vp-reference-spec",
    "crates/vp-reference-model",
    "crates/vp-reference-interpreter",
    "crates/vp-reference-report",
]

[package]
name = "veritypay-reference"
description = "VerityPay reference interpreter workspace"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dev-dependencies]
vp-reference-core = { workspace = true }
vp-reference-interpreter = { workspace = true }
vp-reference-model = { workspace = true }
vp-reference-report = { workspace = true }
vp-reference-spec = { workspace = true }

[lints]
workspace = true

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["VerityPay Core Team"]
repository = "https://github.com/VerityPay-Inc/veritypay-reference"
rust-version = "1.85"

[workspace.dependencies]
vp-reference-cli = { path = "crates/vp-reference-cli" }
vp-reference-core = { path = "crates/vp-reference-core" }
vp-reference-spec = { path = "crates/vp-reference-spec" }
vp-reference-model = { path = "crates/vp-reference-model" }
vp-reference-interpreter = { path = "crates/vp-reference-interpreter" }
vp-reference-report = { path = "crates/vp-reference-report" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = "0.5"
unicode-general-category = "0.6"
unicode-normalization = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
