[package]
name = "vp-reference-cli"
description = "CLI for the VerityPay reference interpreter"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "vp_reference_cli"
path = "src/lib.rs"

[[bin]]
name = "vp-reference"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
vp-reference-core = { workspace = true }
vp-reference-interpreter = { workspace = true }
vp-reference-model = { workspace = true }
vp-reference-spec = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
