[package]
name = "vp-reference-interpreter"
description = "Verification logic for the VerityPay reference interpreter"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vp-reference-core = { workspace = true }
vp-reference-model = { workspace = true }

[lints]
workspace = true
