[package]
name = "vp-reference-model"
description = "Pure domain types for the VerityPay reference interpreter"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true
