[package]
name = "vp-reference-spec"
description = "Specification input loading for the VerityPay reference interpreter"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vp-core = { path = "../../../veritypay-tooling/crates/vp-core" }
vp-reference-core = { workspace = true }
vp-spec-model = { path = "../../../veritypay-tooling/crates/vp-spec-model" }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
